--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="title_activity_maps">Map</string>
-    <string name="access_token" translatable="false">sk.eyJ1IjoibmV4b3RvYSIsImEiOiJjanYzeTRwZHUwODBoNGRtd2ExY2ZrNWxzIn0.UikO3-D262Gfo8VOrSfLRw</string>
+    <string name="access_token" translatable="false">Aqui va tu token</string>
     <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
     <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
 
